fix: note spacing

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 #sheet span {
   line-height: 1;
   border-radius: 0.25ch;
+  padding: 0.1ch 0.25ch 0.2ch;
 }
 
 #sheet span.active {
